[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.10", features = ["tls"] }
rocket_cors = "0.5.2"
clap = "2.33"
jwt-simple = "0.10"
base64 = "0.13"
