[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4", features = ["tls"] }
rocket_cors = "0.5.2"
clap = "2.33"
frank_jwt = "3.1"
serde_json = "1"
base64 = "0.13"
ureq = { version = "0.8.1", features = ["json"] }
